--- a/gcc/config/m68k/m68k.md
+++ b/gcc/config/m68k/m68k.md
@@ -738,7 +738,7 @@
 	operands[0] = force_reg (SImode, XEXP (operands[0], 0));
       else if (GET_CODE (operands[0]) == MEM
 	       && symbolic_operand (XEXP (operands[0], 0), SImode))
-	operands[0] = gen_rtx (MEM, SImode,
+	operands[0] = gen_rtx_MEM (SImode,
 			       force_reg (SImode, XEXP (operands[0], 0)));
     }
 }")
@@ -997,7 +997,7 @@
 	     m68k doesn't consider PC-relative addresses to be writable.  */
 	  if (GET_CODE (operands[0]) == MEM
 	      && symbolic_operand (XEXP (operands[0], 0), SImode))
-	    operands[0] = gen_rtx (MEM, XFmode,
+	    operands[0] = gen_rtx_MEM (XFmode,
 				   force_reg (SImode, XEXP (operands[0], 0)));
 	}
     }
