--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,10 @@
+2004-02-01  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+
+	PR c++/13957
+	* g++.dg/template/non-type-template-argument-1.C, 
+	g++.dg/template/qualified-id1.C: Update	dg-error marks.
+	* g++.dg/template/nontype6.C: New test.
+
 2004-02-01  Roger Sayle  <roger@eyesopen.com>
 
 	* gcc.dg/builtins-1.c: Also test for __builtin_signbit{,f,l}.
