2004-02-01  Thomas Fitzsimmons  <fitzsim@redhat.com>
	* configure.in: Add pkgconfig check for glib and gthread.
	* configure: Regenerate.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77093 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-01  Thomas Fitzsimmons  <fitzsim@redhat.com>
+
+	* configure.in: Add pkgconfig check for glib and gthread.
+	* configure: Regenerate.
+
 2004-02-01  Michael Koch  <konqueror@gmx.de>
 
 	* include/jvm.h (MAYBE_UNUSED): New macro tp mark probably unused
