--- a/gcc/config/rs6000/rs6000.md
+++ b/gcc/config/rs6000/rs6000.md
@@ -2583,10 +2583,10 @@
 {
   rtx i;
   i = GEN_INT (INTVAL (operands[2]) & (~ (HOST_WIDE_INT) 0xffff));
-  operands[4] = gen_rtx (GET_CODE (operands[3]), SImode,
+  operands[4] = gen_rtx_fmt_ee (GET_CODE (operands[3]), SImode,
 			 operands[1], i);
   i = GEN_INT (INTVAL (operands[2]) & 0xffff);
-  operands[5] = gen_rtx (GET_CODE (operands[3]), SImode,
+  operands[5] = gen_rtx_fmt_ee (GET_CODE (operands[3]), SImode,
 			 operands[0], i);
 }")
 
@@ -7363,9 +7363,9 @@
 			     & (~ (HOST_WIDE_INT) 0xffff));
       i4 = GEN_INT (INTVAL (operands[2]) & 0xffff);
     }
-  operands[4] = gen_rtx (GET_CODE (operands[3]), DImode,
+  operands[4] = gen_rtx_fmt_ee (GET_CODE (operands[3]), DImode,
 			 operands[1], i3);
-  operands[5] = gen_rtx (GET_CODE (operands[3]), DImode,
+  operands[5] = gen_rtx_fmt_ee (GET_CODE (operands[3]), DImode,
 			 operands[0], i4);
 }")
 
@@ -13685,22 +13685,22 @@
   positive_2 = branch_positive_comparison_operator (operands[3], CCEQmode);
 
   if (! positive_1)
-    operands[1] = gen_rtx (rs6000_reverse_condition (GET_MODE (operands[2]),
+    operands[1] = gen_rtx_fmt_ee (rs6000_reverse_condition (GET_MODE (operands[2]),
 						     GET_CODE (operands[1])),
 			   SImode,
 			   operands[2], const0_rtx);
   else if (GET_MODE (operands[1]) != SImode)
-    operands[1] = gen_rtx (GET_CODE (operands[1]),
+    operands[1] = gen_rtx_fmt_ee (GET_CODE (operands[1]),
 			   SImode,
 			   operands[2], const0_rtx);
 
   if (! positive_2)
-    operands[3] = gen_rtx (rs6000_reverse_condition (GET_MODE (operands[4]),
+    operands[3] = gen_rtx_fmt_ee (rs6000_reverse_condition (GET_MODE (operands[4]),
 						     GET_CODE (operands[3])),
 			   SImode,
 			   operands[4], const0_rtx);
   else if (GET_MODE (operands[3]) != SImode)
-    operands[3] = gen_rtx (GET_CODE (operands[3]),
+    operands[3] = gen_rtx_fmt_ee (GET_CODE (operands[3]),
 			   SImode,
 			   operands[4], const0_rtx);
 
@@ -14207,7 +14207,7 @@
 			   (match_dup 5)
 			   (match_dup 6)))]
   "
-{ operands[7] = gen_rtx (GET_CODE (operands[2]), VOIDmode, operands[3],
+{ operands[7] = gen_rtx_fmt_ee (GET_CODE (operands[2]), VOIDmode, operands[3],
 			 const0_rtx); }")
 
 (define_split
@@ -14236,7 +14236,7 @@
 			   (match_dup 5)
 			   (match_dup 6)))]
   "
-{ operands[7] = gen_rtx (GET_CODE (operands[2]), VOIDmode, operands[3],
+{ operands[7] = gen_rtx_fmt_ee (GET_CODE (operands[2]), VOIDmode, operands[3],
 			 const0_rtx); }")
 (define_split
   [(set (pc)
@@ -14262,7 +14262,7 @@
 			   (match_dup 5)
 			   (match_dup 6)))]
   "
-{ operands[7] = gen_rtx (GET_CODE (operands[2]), VOIDmode, operands[3],
+{ operands[7] = gen_rtx_fmt_ee (GET_CODE (operands[2]), VOIDmode, operands[3],
 			 const0_rtx); }")
 
 (define_split
@@ -14291,7 +14291,7 @@
 			   (match_dup 5)
 			   (match_dup 6)))]
   "
-{ operands[7] = gen_rtx (GET_CODE (operands[2]), VOIDmode, operands[3],
+{ operands[7] = gen_rtx_fmt_ee (GET_CODE (operands[2]), VOIDmode, operands[3],
 			 const0_rtx); }")
 
 (define_insn "trap"
