--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-02  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* doc/invoke.texi (SPARC options): Document that -mflat is deprecated.
+
 2004-02-02  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/arc/arc.md, config/arm/arm.c, config/arm/arm.md,
