* config/arm/arm.md, config/c4x/c4x.md, config/cris/cris.md, 	config/h8300/h8300.c, config/ip2k/ip2k.md, 	config/iq2000/iq2000.c, config/mips/mips.c, 	config/rs6000/rs6000.c, config/rs6000/rs6000.md, 	config/sh/sh.c, config/sh/sh.md, config/stormy16/stormy16.c, 	config/v850/v850.md: Fix indentation.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77116 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2004-02-02  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* config/arm/arm.md, config/c4x/c4x.md, config/cris/cris.md,
+	config/h8300/h8300.c, config/ip2k/ip2k.md,
+	config/iq2000/iq2000.c, config/mips/mips.c,
+	config/rs6000/rs6000.c, config/rs6000/rs6000.md,
+	config/sh/sh.c, config/sh/sh.md, config/stormy16/stormy16.c,
+	config/v850/v850.md: Fix indentation.
+
 2004-02-02  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* config/sparc/sparc.c (function_arg_slotno): Align TImode
