* gcc.dg/titype-1.c: Fix pasto.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77119 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2004-02-02  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
+	* gcc.dg/titype-1.c: Fix pasto.
+
+2004-02-02  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
 	* gcc.dg/titype-1.c: New test.
 
 2004-02-01  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
