* Makefile.in: Remove setting of THREADSLIB on mips o32, unneeded.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77122 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-02  Arnaud Charlet  <charlet@gnat.com>
+
+	* Makefile.in: Remove setting of THREADSLIB on mips o32, unneeded.
+
 2004-02-02  Vincent Celier  <celier@gnat.com>
 
 	* gprcmd.adb (Check_Args): If condition is false, print the invoked
