--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-02  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* doc/invoke.texi (SPARC options): Further improve.
+
 2004-02-02  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* config/arm/arm.md, config/c4x/c4x.md, config/cris/cris.md,
