--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-02  David Edelsohn  <edelsohn@gnu.org>
+
+	* rtlanal.c (refers_to_regno_p): Test regno, not inner_regno,
+	against FIRST_PSEUDO_REGISTER.
+
 2004-02-02  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* doc/invoke.texi (SPARC options): Further improve.
