* genemit.c (gen_exp): Generate gen_rtx_fmt_e* instead of 	gen_rtx.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77137 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-02  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* genemit.c (gen_exp): Generate gen_rtx_fmt_e* instead of
+	gen_rtx.
+
 2004-02-02  Eric Christopher  <echristo@redhat.com>
             Zack Weinberg  <zack@codesourcery.com>
 
