* decl.c (java_init_decl_processing): Remove duplicate 	gnu/gcj/RawData.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77151 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-02  Tom Tromey  <tromey@redhat.com>
+
+	* decl.c (java_init_decl_processing): Remove duplicate
+	gnu/gcj/RawData.
+
 2004-01-30  Kelley Cook  <kcook@gcc.gnu.org>
 
 	* Make-lang.in (doc/gcj.dvi): Use $(abs_docdir). 
