PR target/13789         * expr.c (store_expr): Use force_operand before emit_move_insn.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77158 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-02  Richard Henderson  <rth@redhat.com>
+
+        PR target/13789
+        * expr.c (store_expr): Use force_operand before emit_move_insn.
+
 2004-02-02  Jeff Law  <law@redhat.com>
 	    Roger Sayle  <roger@eyesopen.com>
 
