gcc/ 	* combine.c (simplify_set): Use gen_rtx_fmt_e instead of 	gen_rtx. 	* emit-rtl.c (init_emit_once): Use gen_rtx_PC and gen_rtx_CC0 	instead of gen_rtx. 	* reload1.c (init_elim_table): Use gen_rtx_fmt_e instead of 	gen_rtx. 	* config/ns32k/ns32k.md (udivmodhi4): Use gen_rtx_IOR and 	gen_rtx_ASHIFT instead of gen_rtx. 	(udivmodqi4): Likewise.
	ada/
	* ada/trans.c (gigi): Use gen_rtx_SYMBOL_REF instead of
	gen_rtx.

	f/
	* com.c (ffecom_member_phase2_): Use gen_rtx_MEM instead of
	gen_rtx.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@77159 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,15 @@
+2004-02-03  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* combine.c (simplify_set): Use gen_rtx_fmt_e instead of
+	gen_rtx.
+	* emit-rtl.c (init_emit_once): Use gen_rtx_PC and gen_rtx_CC0
+	instead of gen_rtx.
+	* reload1.c (init_elim_table): Use gen_rtx_fmt_e instead of
+	gen_rtx.
+	* config/ns32k/ns32k.md (udivmodhi4): Use gen_rtx_IOR and
+	gen_rtx_ASHIFT instead of gen_rtx.
+	(udivmodqi4): Likewise.
+
 2004-02-02  Richard Henderson  <rth@redhat.com>
 
         PR target/13789
