--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-03  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* ada/trans.c (gigi): Use gen_rtx_SYMBOL_REF instead of
+	gen_rtx.
+
 2004-02-02  Arnaud Charlet  <charlet@gnat.com>
 
 	* Makefile.in: Remove setting of THREADSLIB on mips o32, unneeded.
