--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,8 @@
+2004-02-03  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* com.c (ffecom_member_phase2_): Use gen_rtx_MEM instead of
+	gen_rtx.
+
 2004-01-30  Kelley Cook  <kcook@gcc.gnu.org>
 
 	* Make-lang.in (doc/g77.dvi): Use $(abs_docdir). 
