--- a/gcc/config/mn10300/mn10300.md
+++ b/gcc/config/mn10300/mn10300.md
@@ -1074,7 +1074,7 @@
 {
   rtx target = gen_reg_rtx (SImode);
 
-  emit_move_insn (target, GEN_INT (0));
+  emit_move_insn (target, const0_rtx);
   emit_insn (gen_subsi3 (target, target, operands[1]));
   emit_move_insn (operands[0], target);
   DONE;
@@ -1772,7 +1772,7 @@
   emit_move_insn (index, plus_constant (operands[0], - INTVAL (operands[1])));
   emit_insn (gen_cmpsi (index, operands[2]));
   emit_jump_insn (gen_bgtu (operands[4]));
-  emit_move_insn (index, gen_rtx_ASHIFT (SImode, index, GEN_INT (2)));
+  emit_move_insn (index, gen_rtx_ASHIFT (SImode, index, const2_rtx));
   emit_move_insn (addr, gen_rtx_MEM (SImode,
 				     gen_rtx_PLUS (SImode, table, index)));
   if (flag_pic)
