--- a/gcc/config/s390/s390.md
+++ b/gcc/config/s390/s390.md
@@ -547,7 +547,7 @@
   [(set (reg 33)
         (compare (match_operand:HI 0 "register_operand" "d")
                  (match_operand:HI 1 "immediate_operand" "n")))]
-  "s390_match_ccmode (insn, s390_tm_ccmode (GEN_INT (-1), operands[1], 1))"
+  "s390_match_ccmode (insn, s390_tm_ccmode (constm1_rtx, operands[1], 1))"
   "tml\t%0,65535"
   [(set_attr "op_type" "RX")])
 
@@ -555,7 +555,7 @@
   [(set (reg 33)
         (compare (match_operand:QI 0 "register_operand" "d")
                  (match_operand:QI 1 "immediate_operand" "n")))]
-  "s390_match_ccmode (insn, s390_tm_ccmode (GEN_INT (-1), operands[1], 1))"
+  "s390_match_ccmode (insn, s390_tm_ccmode (constm1_rtx, operands[1], 1))"
   "tml\t%0,255"
   [(set_attr "op_type" "RI")])
 
@@ -6822,7 +6822,7 @@
    if (TARGET_64BIT)
        emit_insn (gen_ashldi3 (index, index, GEN_INT (3)));
    else
-       emit_insn (gen_ashlsi3 (index, index, GEN_INT (2)));
+       emit_insn (gen_ashlsi3 (index, index, const2_rtx));
 
    emit_move_insn (base, gen_rtx_LABEL_REF (Pmode, operands[3]));
 
