--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,12 @@
+2004-02-03  Paolo Bonzini  <bonzini@gnu.org>
+
+	PR c/11658
+	PR c/13994
+	* gcc.dg/noncompile/20040203-1.c: New test.
+	* gcc.dg/noncompile/20040203-2.c: Likewise.
+	* gcc.dg/noncompile/20040203-3.c: Likewise.
+	* gcc.dg/20040203-1.c: Likewise.
+
 2004-02-02  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	PR c++/10858
