--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,15 @@
+2004-02-03  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/13978
+	* g++.dg/template/koenig4.C: New test.
+
+	PR c++/13968
+	* g++.dg/template/crash17.C: New test.
+
+	PR c++/13975
+	* g++.dg/parse/error13.C: New test.
+	* g++.old-deja/g++.robertl/eb125.C: Tweak error messages.
+
 2004-02-03  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* gcc.dg/20020503-1.c: Remove -mflat dg-options.
